force-app/main/default/objects/SBQQ__Quote__c/fields/AVA_SFCPQ__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Invoice_Message__c</fullName>
    <description>Invoice messaging returned by the AvaTax service.</description>
    <inlineHelpText>Invoice messaging returned by the AvaTax service.</inlineHelpText>
    <label>Invoice Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>