force-app/main/default/objects/SBQQ__Quote__c/fields/AVA_SFCPQ__Quote_AutomateTaxCalculation__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Quote_AutomateTaxCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers AvaTax to show the calculated tax.</description>
    <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
    <label>CalculateTax</label>
    <type>Checkbox</type>
</CustomField>