force-app/main/default/objects/SBQQ__Quote__c/fields/AVA_SFCPQ__SalesTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__SalesTaxAmount__c</fullName>
    <description>Displays the tax amount calculated by AvaTax.</description>
    <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
    <label>Sales Tax Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>