force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Type__c</fullName>
    <description>Three fields/values from the Account object help drive product selection within the quote/cart. These fields/values are:
1 Customer/Account Type (Billing_Account_Type__c)
2 Region/Pricebook
3 Tier (Billing_Tier__c)

This particular field is a formula that looks up to the Opportunity.Billing_Account_Type__c. At the opportunity level, the referenced field is stamped with the customer/account type at time of opty creation, via workflow, and will pass it down to this quote formula field. This quote level field, Billing_Account_Type__c, will thereby use the value to help drive product selection in the cart.

Field values received in this formula text field include: Hiring Client/Contractor Operator, Hiring Client Account Consolidation, Contractor, and Monarch. (These values are similar to the types of opportunities available)</description>
    <formula>TEXT(SBQQ__Opportunity2__r.Billing_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Type</label>
    <type>Text</type>
</CustomField>