force-app/main/default/objects/SBQQ__Quote__c/fields/CPQ_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Purchase_Order_Number__c</fullName>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>