force-app/main/default/objects/SBQQ__Quote__c/fields/CPQ_QuotePublishComment__c.field-meta.xml
<CustomField>
    <fullName>CPQ_QuotePublishComment__c</fullName>
    <description>Used by aMind Self-Service Accelerator code base to store an additional message to send to the channel user when the quote is published to the self-service channel.</description>
    <label>Publish Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>