force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <label>Deal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>