force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Offering__c.field-meta.xml
<CustomField>
    <fullName>Deal_Offering__c</fullName>
    <inlineHelpText>Provide the name of the offering contained in this quote.</inlineHelpText>
    <label>Deal Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>