force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Input_Type__c</fullName>
    <formula>Billing_Account_Type__c  &amp; &#39; - &#39; &amp;  IF(SBQQ__Opportunity2__r.SBQQ__Renewal__c , &#39;renewal&#39;, &#39;new&#39;)</formula>
    <label>Invoice Input Type</label>
    <type>Text</type>
</CustomField>