force-app/main/default/objects/SBQQ__Quote__c/fields/ISN_Invoice_Number_Seq__c.field-meta.xml
<CustomField>
    <fullName>ISN_Invoice_Number_Seq__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>ISN Invoice Number Seq</label>
    <type>AutoNumber</type>
</CustomField>