force-app/main/default/objects/SBQQ__Quote__c/fields/Main_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Main Admin ContactMainMain)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>