force-app/main/default/objects/SBQQ__Quote__c/fields/Main_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Main Billing Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>