force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Amount_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_With_Tax__c</fullName>
    <formula>SBQQ__NetAmount__c + AVA_SFCPQ__SalesTaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>