force-app/main/default/objects/SBQQ__Quote__c/fields/SSA_IsCart__c.field-meta.xml
<CustomField>
    <fullName>SSA_IsCart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cart</label>
    <type>Checkbox</type>
</CustomField>