force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Amount__c</fullName>
    <formula>SBQQ__CustomerAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>