force-app/main/default/objects/SBQQ__Quote__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SBQQ__NetAmount__c</columns>
    <columns>SBQQ__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>